<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".UsuarioActivity" >

    <TextView
        android:id="@+id/txtNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/edtNome"
        android:text="@string/nome" />

    <EditText
        android:id="@+id/edtNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="24dp"
        android:layout_toRightOf="@+id/txtNome"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/txtSal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtNome"
        android:layout_below="@+id/txtNome"
        android:layout_marginTop="46dp"
        android:text="@string/salario" />

    <EditText
        android:id="@+id/edtSal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/txtSal"
        android:layout_alignLeft="@+id/edtSalAtual"
        android:ems="10"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/txtTotalDesp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtSal"
        android:layout_below="@+id/txtSal"
        android:layout_marginTop="42dp"
        android:text="@string/totalGatos" />

    <EditText
        android:id="@+id/edtSalAtual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/txtTotalDesp"
        android:layout_marginLeft="27dp"
        android:layout_toRightOf="@+id/txtTotalDesp"
        android:ems="10"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/txtSalAtual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtTotalDesp"
        android:layout_centerVertical="true"
        android:text="@string/salAtual" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txtSalAtual"
        android:layout_alignBottom="@+id/txtSalAtual"
        android:layout_alignLeft="@+id/edtSalAtual"
        android:ems="10"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/btnInserirDesp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText1"
        android:layout_marginTop="45dp"
        android:layout_toRightOf="@+id/txtSal"
        android:text="@string/inserirDesp" />

    <Button
        android:id="@+id/btnMyDesp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnInserirDesp"
        android:layout_below="@+id/btnInserirDesp"
        android:layout_marginTop="34dp"
        android:text="@string/despesa" />

</RelativeLayout>